# bifx

./: .env.example  .gitignore  CHANGELOG.md  README.md  config.py  lint.sh  pyproject.toml  requirements.txt  run_pipeline.py  setup.py  verify.py
core/: __init__.py  backtest.py  data_loader.py  feature_engine.py  index_calculator.py
features/: __init__.py  cds_spike.py  correlation_breakdown.py  example_double_price.py  realized_vol.py  sentiment_trends.py  usdtry_shock.py  vix_level.py
