[project]
name = "bifx"
version = "1.0.0"
description = "Borsa Istanbul Fear Index - Modular plugin-based fear index system"
requires-python = ">=3.9"
dependencies = [
    "alpha-vantage>=2.3.0",
    "black>=23.0.0",
    "duckdb>=0.9.0",
    "feedparser>=6.0.10",
    "lightgbm>=4.0.0",
    "matplotlib>=3.7.0",
    "mypy>=1.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "python-dotenv>=1.0.0",
    "pytrends>=4.9.0",
    "requests>=2.31.0",
    "ruff>=0.1.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "seaborn>=0.12.0",
    "yfinance>=0.2.28",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"

# Exclude a variety of commonly ignored directories
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
]

ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["bifx", "core", "features"]
force-single-line = false
lines-after-imports = 2

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = false
strict_equality = false
ignore_missing_imports = true
follow_imports = "skip"
show_error_codes = true

# Exclude certain directories
exclude = [
    "venv/",
    ".venv/",
    "build/",
    "dist/",
    "data/",
]
